--- a/community_manager/package.json
+++ b/community_manager/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "view-design": "^4.1.3",
     "vue": "^2.6.11",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
