--- a/community_manager/package.json
+++ b/community_manager/package.json
@@ -11,7 +11,6 @@
     "core-js": "^3.6.4",
     "view-design": "^4.1.3",
     "vue": "^2.6.11",
-    "vue-amap": "^0.5.10",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
@@ -42,6 +41,7 @@
     },
     "rules": {
       "no-unused-vars": "off",
+      "no-undef": "off",
       "vue/no-parsing-error": [
         2,
         {
